@@ -1,5 +1,11 @@
 2011-07-25  Corinna Vinschen  <corinna@vinschen.de>
 
+	* rebase.c (print_image_info): Compute length of longest DLL name and
+	use as field width in printf.  Default to longest available fiel length
+	for 80 char display.
+
+2011-07-25  Corinna Vinschen  <corinna@vinschen.de>
+
 	* rebase.c (load_image_info): Handle short reads.
 
 2011-07-23  Corinna Vinschen  <corinna@vinschen.de>
